--- a/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
@@ -1848,7 +1848,7 @@
 
                           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                           <SubComponents>
-                            <Component class="com.ebooks.Compoment.Table" name="table7">
+                            <Component class="com.ebooks.Compoment.Table" name="tblTaiKhoan">
                               <Properties>
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                                   <Table columnCount="4" rowCount="4">
@@ -1859,6 +1859,9 @@
                                   </Table>
                                 </Property>
                               </Properties>
+                              <Events>
+                                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblTaiKhoanMouseClicked"/>
+                              </Events>
                             </Component>
                           </SubComponents>
                         </Container>
@@ -1964,7 +1967,7 @@
                             </Constraint>
                           </Constraints>
                         </Component>
-                        <Component class="com.ebooks.Compoment.MyButton" name="myButton98">
+                        <Component class="com.ebooks.Compoment.MyButton" name="btnSuaTaiKhoan">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="6e" green="be" red="57" type="rgb"/>
@@ -1984,13 +1987,16 @@
                             </Property>
                             <Property name="radius" type="int" value="10"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnSuaTaiKhoanMouseClicked"/>
+                          </Events>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                               <AbsoluteConstraints x="880" y="140" width="150" height="40"/>
                             </Constraint>
                           </Constraints>
                         </Component>
-                        <Component class="com.ebooks.Compoment.MyButton" name="myButton99">
+                        <Component class="com.ebooks.Compoment.MyButton" name="btnXoaTaiKhoan">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="7f" green="7f" red="fd" type="rgb"/>
@@ -2010,13 +2016,16 @@
                             </Property>
                             <Property name="radius" type="int" value="10"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXoaTaiKhoanActionPerformed"/>
+                          </Events>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                               <AbsoluteConstraints x="880" y="200" width="150" height="40"/>
                             </Constraint>
                           </Constraints>
                         </Component>
-                        <Component class="com.ebooks.Compoment.MyButton" name="myButton100">
+                        <Component class="com.ebooks.Compoment.MyButton" name="btnThemTaiKhoan">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="6e" green="be" red="57" type="rgb"/>
@@ -2036,6 +2045,9 @@
                             </Property>
                             <Property name="radius" type="int" value="10"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemTaiKhoanActionPerformed"/>
+                          </Events>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                               <AbsoluteConstraints x="880" y="80" width="150" height="40"/>
@@ -2194,7 +2206,7 @@
                             </Constraint>
                           </Constraints>
                         </Component>
-                        <Component class="com.ebooks.Compoment.MyButton" name="myButton105">
+                        <Component class="com.ebooks.Compoment.MyButton" name="btnXoaNguoiDung">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="7f" green="7f" red="fd" type="rgb"/>
@@ -2214,13 +2226,16 @@
                             </Property>
                             <Property name="radius" type="int" value="10"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXoaNguoiDungActionPerformed"/>
+                          </Events>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                               <AbsoluteConstraints x="880" y="140" width="150" height="40"/>
                             </Constraint>
                           </Constraints>
                         </Component>
-                        <Component class="com.ebooks.Compoment.MyButton" name="myButton106">
+                        <Component class="com.ebooks.Compoment.MyButton" name="btnSuaNguoiDung">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="6e" green="be" red="57" type="rgb"/>
@@ -2240,13 +2255,16 @@
                             </Property>
                             <Property name="radius" type="int" value="10"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSuaNguoiDungActionPerformed"/>
+                          </Events>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                               <AbsoluteConstraints x="880" y="80" width="150" height="40"/>
                             </Constraint>
                           </Constraints>
                         </Component>
-                        <Component class="com.ebooks.Compoment.MyButton" name="myButton107">
+                        <Component class="com.ebooks.Compoment.MyButton" name="btnThemNguoiDung">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="6e" green="be" red="57" type="rgb"/>
@@ -2267,7 +2285,7 @@
                             <Property name="radius" type="int" value="10"/>
                           </Properties>
                           <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="myButton107ActionPerformed"/>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemNguoiDungActionPerformed"/>
                           </Events>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
